NIFI-12452 Refactor zendesk bundle to use updated APIs